# cobecode7--Professional-E-commerce-Platform

./: .env.example  .gitignore  .pre-commit-config.yaml  DATABASE_SETUP_INSTRUCTIONS.md  DEVELOPMENT_PLAN.md  FEATURE_TEST_REPORT.md  NEXT_STEPS.md  PRODUCTION_SECURITY_CHECKLIST.md  PROJECT_CLEANUP_REPORT.md  README.md.new  agent.md  index.html  init_project.sh  script.js  style.css  validate_setup.py
archived_docs/: ADMIN_LOGIN_FIXED.md  ADMIN_NOREVERSMATCH_FIXED.md  ADMIN_SETUP_COMPLETE.md  CART_AND_PAGES_FIXES.md  COMPLETION_STATUS.md  CRITICAL_SECURITY_FIXES_COMPLETED.md  CSRF_FIX_GUIDE.md  CURRENT_PROBLEMS.md  ERRORS_FIXED.md  FINAL_ERROR_RESOLUTION.md  (+14 more)
backend/: .env.example  PHASE2_SECURITY_DEMO.md  PHASE2_SECURITY_IMPLEMENTATION_STATUS.md  main.py  pyproject.toml  ruff.toml
backend/apps/accounts/: admin.py  apps.py  models.py  serializers.py  test_models.py  urls.py  views.py
backend/apps/accounts/management/commands/: setup_admin.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_auto_20251001_2157.py  0003_rename_marketing_emails_userprofile_email_notifications_and_more.py
backend/apps/core/: apps.py  middleware.py  test_security.py
backend/apps/orders/: admin.py  apps.py  models.py  serializers.py  test_models.py  urls.py  views.py
backend/apps/orders/migrations/: 0001_initial.py
backend/apps/products/: admin.py  apps.py  models.py  serializers.py  test_basic.py  test_models.py  urls.py  views.py
backend/apps/products/migrations/: 0001_initial.py  0002_alter_productimage_unique_together_and_more.py
backend/apps/reviews/: apps.py  urls.py
backend/config/: admin.py  urls.py  wsgi.py
backend/config/settings/: base.py  development.py  production.py  security.py  testing.py
backend/templates/admin/: base_site.html  index.html
(+36 files in other folders)
